--- a/tests/k8s/Vagrantfile
+++ b/tests/k8s/Vagrantfile
@@ -59,6 +59,10 @@ if ENV['BUILD_NUMBER'] then
     $build_id_name = "-build-#{$build_id}"
 end
 
+$iptables_fix = <<SCRIPT
+sudo iptables -t nat -A POSTROUTING -o enp0s8 ! -s 192.168.36.12 -j MASQUERADE
+SCRIPT
+
 Vagrant.configure(2) do |config|
     config.vm.box = "bento/ubuntu-16.10"
 
@@ -97,6 +101,7 @@ Vagrant.configure(2) do |config|
                 s.vm.provision "cilium-master-netconfig", type: "shell", run: "always", inline: $cilium_master
                 s.vm.provision "build", type: "shell", env: {"DOCKER_IMAGE_TAG" => $docker_image_tag}, inline: $build_docker_image
             else
+                s.vm.provision "iptables-fix", type: "shell", run: "always", inline: $iptables_fix
                 s.vm.provision "cilium-slave-netconfig", type: "shell", run: "always", inline: $cilium_slave
                 s.vm.provision "load-docker-image", type: "shell", env: {"DOCKER_IMAGE_TAG" => $docker_image_tag}, inline: $load_docker_image
             end
